// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTooltip should mount component and match snapshot 1`] = `
<body>
  <div
    data-v-app=""
  >
    
    <transition-stub
      appear="false"
      css="true"
      mode=""
      name="fade"
      persisted="false"
    />
    <div
      class="activator"
    />
    
  </div>
  <span
    class="v-tooltip grey lighten-1"
    style="display: none;"
  >
    <span>
      some text
    </span>
  </span>
</body>
`;

exports[`VTooltip should render component with bottom and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should render component with left and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should render component with right and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should render component with top and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should set activator and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should set max width and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should set min width and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should set offsetX and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should set offsetY and match snapshot 1`] = `
<transition-stub name="fade"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should trigger mouseenter event, show tooltip and match snapshot 1`] = `
<transition-stub name="scale-in"
                 mode
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
<div class="activator">
</div>
`;

exports[`VTooltip should trigger mouseleave event, hide tooltip and match snapshot 1`] = `
<body>
  <div
    data-v-app=""
  >
    
    <transition-stub
      appear="false"
      css="true"
      mode=""
      name="fade"
      persisted="false"
    />
    <div
      class="activator"
    />
    
  </div>
  <span
    class="v-tooltip grey lighten-1"
    style="display: none;"
  >
    <span>
      some text
    </span>
  </span>
  <div
    data-v-app=""
  >
    
    <transition-stub
      appear="false"
      css="true"
      mode=""
      name="fade"
      persisted="false"
    />
    <div
      class="activator"
    />
    
  </div>
  <span
    class="v-tooltip grey lighten-1"
    style="display: none;"
  >
    <span>
      some text
    </span>
  </span>
  <div
    data-v-app=""
  >
    
    <transition-stub
      appear="false"
      css="true"
      mode=""
      name="scale-in"
      persisted="false"
    />
    <div
      class="activator"
    />
    
  </div>
  <span
    class="v-tooltip grey lighten-1"
    style=""
  >
    <span>
      some text
    </span>
  </span>
  <div
    data-v-app=""
  >
    
    <transition-stub
      appear="false"
      css="true"
      mode=""
      name="fade"
      persisted="false"
    />
    <div
      class="activator"
    />
    
  </div>
  <span
    class="v-tooltip grey lighten-1"
    style="display: none;"
  >
    <span>
      some text
    </span>
  </span>
</body>
`;
